--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 59-
+[2006/12/11] - RaX - Added GetBaseHP and SP functions to the database class.
+-
+
 - Rev 58-
 [2006/12/06] - Tsusai - Notes/Overview: Random tweaks to things.
 [2006/12/06] - Tsusai - CharaServerTypes - widestring->string conversions. Not needed
