--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,12 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 60-
+[2006/12/13] - Tsusai - Notes/Overview: JanSQL committed, its a TXT SQL system.
+[2006/12/13] - Tsusai - Added JanSQL folder and added into project.
+[2006/12/13] - Tsusai - Renamed SQL folder to MySQL.
+-
+
 - Rev 59-
 [2006/12/11] - RaX - Added GetBaseHP and SP functions to the database class.
 -
