--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,15 @@ Developers & Contributers
 - RaX
 
 -------------------------------------------------------------------------------------------
+
+- Rev 65-
+[2006/12/18] - Tsusai - Notes/Overview: Linux compiler fixes.
+[2006/12/18] - Tsusai - JanSQLDatabase : Renamed JanSQL in the uses to janSQL.  Unit name
+ must match file name.  Its a casesensitive OS.
+[2006/12/18] - Tsusai - janSQLExpressions2 : Recleaned, leaving 1 hint for now.  For some 
+ odd reason the crosskylix compiler wasn't liking it the way I had it.
+-
+
 - Rev 64-
 [2006/12/17] - RaX - Moved all servers into classes located in Classes/Servers/
 [2006/12/17] - RaX - Reorganized Console.pas to accomodate changes made to servers.
