--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,18 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 66-
+[2006/12/18] - Tsusai - Notes/Oveview: JanSQL (TXT reading) debugged.
+[2006/12/18] - Tsusai - JanSQLDatabase/MySQLDatabase : Cleaned up ****Exists routines.  
+ Added missing memory free'ing of QueryResults.
+[2006/12/18] - Tsusai - JanSQLDatabase - SendQuery : If locating a row failed, and returned
+ nothing (it happens), it would return a nil set.  Works now by creating one prior to setting.
+ Not too sure this is proper.
+[2006/12/18] - Tsusai - janSQLTokenizer: Restored to pre cleaning.  Something I did made it
+ malfunction on connecting.
+[2006/12/18] - Tsusai - Globals : Readded optional INI loading.
+-
+
 - Rev 65-
 [2006/12/18] - Tsusai - Notes/Overview: Linux compiler fixes.
 [2006/12/18] - Tsusai - JanSQLDatabase : Renamed JanSQL in the uses to janSQL.  Unit name
