--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 68-
+[2006/12/18] - RaX - Merged ZoneCore into ZoneServer.pas.
+-
+
 - Rev 67-
 [2006/12/18] - RaX - Suppressed hints and warnings in jansql using compiler directives.
 [2006/12/18] - RaX - Moved server classes into their respective folders in the src root.
