--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,15 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 69-
+[2006/12/19] - Tsusai - Heh...69.                     Sorry..couldn't help myself
+[2006/12/19] - Tsusai - Accounts: For some reason if a person attempted to login with the mf 
+ suffix for auto account creation on MD5 connection, following connections would be told
+ they have no more game time. The Now procedure was somehow not returning, but with
+ SysUtils.Now as the replacement, it works.  Not too sure if something is causing a conflict
+ with it, but it should be sound now.
+-
+
 - Rev 68-
 [2006/12/18] - RaX - Merged ZoneCore into ZoneServer.pas.
 -
