--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,20 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+
+- Rev 72-
+[2006/12/21] - RaX - Modified JanSQLDatabase.pas to use resultidentifier numbers to access
+ the internal list of recordsets rather than using passed QueryResult pointers. Freeing
+ these was causing JanSQL to corrupt it's internal list and cause random crashes. Also,
+ the result list would get unbearably huge after a short time =) from now on we use
+ Database.ReleaseRecordset(ResultIdentifier : Integer) to free our query results in jan.
+[2006/12/21] - RaX - Modified MySQLDatabase and JanSQLDatabase in GetBanAndConnect to use
+ special queries rather than just reloading the entire account.
+[2006/12/21] - RaX - changed serveroptions.ini to have the default database host as ./save
+ to allow jansql to work out of the box.
+[2006/12/21] - RaX - added jansql database to the save folder in trunk/bin.
+-
+
 - Rev 71-
 [2006/12/20] - Tsusai - Notes/Overview: Updates to database system.
 [2006/12/20] - Tsusai - DatabaseTemplate: Modified CONNECT to use out current standard
