--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,12 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 76-
+[2006/12/21] - RaX - Fixed CharacterList Corruption bug. We were free'ing ACharacter after
+ it was already free'd in CharacterList.Delete which caused a crash.(JanSQLDatabase,
+ MySQLDatabase)
+-
+
 - Rev 75-
 [2006/12/21] - RaX - Removed Deprecated units AccountDB, SQL, and SaveThread. Leaving
  XTimer in case we need a timer.
