--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 78 -
+[2006/12/22] - RaX - Added GetPacketLength to TCPServerRoutines.
+-
+
 - Rev 77-
 [2006/12/22] - RaX - Confusion on my part, NOW the characterlist bug is fixed with no leaks
 [2006/12/22] - RaX - Updated headers in all files.
