--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 80 -
+[2006/12/23] - Muad_Dib - Added new jobs (ninja, gunslinger, xmas suit) to GameConstants.
+-
+
 - Rev 79 -
 [2006/12/23] - RaX - Added Updated jAthena Packet_db. Fully updated.
 -
