--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,11 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 82 -
+[2006/12/23] - RaX - Reordered Character Deletion Errors in CharacterServer due to some
+ weird error messages.
+-
+
 - Rev 81 -
 [2006/12/23] - RaX - Notes/Overview - Implemented new FASTER character list and fixed a bug
  in JanSQLDatabase.
